templates/analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
  labels:
    upsource: analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: analyzer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: analyzer
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: analyzer
          args:
            - --J
          image: jetbrains/upsource-analyzer:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: analyzer-logs
              mountPath: /opt/upsource-analyzer/logs
      restartPolicy: Always
      volumes:
        - name: analyzer-logs
          emptyDir: { }
