templates/cluster-init-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-init
  labels:
    upsource: cluster-init
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: cluster-init
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: cluster-init
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: cluster-init
          args:
            - --J
          image: jetbrains/upsource-cluster-init:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cluster-init-logs
              mountPath: /opt/upsource-analyzer/logs
      restartPolicy: Always
      volumes:
        - name: cluster-init-logs
          emptyDir: { }
