templates/file-clustering-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-clustering
  labels:
    upsource: file-clustering
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: file-clustering
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: file-clustering
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: file-clustering
          args:
            - --J
          image: jetbrains/upsource-file-clustering:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: file-clustering-logs
              mountPath: /opt/upsource-file-clustering/logs
      restartPolicy: Always
      volumes:
        - name: file-clustering-logs
          emptyDir: { }
