templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    upsource: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: frontend
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: frontend
          args:
            - --J
          image: jetbrains/upsource-frontend:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: frontend-logs
              mountPath: /opt/upsource-frontend/logs
      restartPolicy: Always
      volumes:
        - name: frontend-logs
          emptyDir: { }
