templates/opscenter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opscenter
  labels:
    upsource: opscenter
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: opscenter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: opscenter
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: opscenter
          args:
            - --J
          image: jetbrains/upsource-opscenter:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: opscenter-logs
              mountPath: /opt/upsource-opscenter/logs
      restartPolicy: Always
      volumes:
        - name: opscenter-logs
          emptyDir: { }
