templates/psi-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psi-agent
  labels:
    upsource: psi-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: psi-agent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: psi-agent
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: psi-agent
          args:
            - --J
          image: jetbrains/upsource-psi-agent:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: psi-agent-logs
              mountPath: /opt/upsource-psi-agent/logs
      restartPolicy: Always
      volumes:
        - name: psi-agent-logs
          emptyDir: { }
