templates/psi-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psi-broker
  labels:
    upsource: psi-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      upsource: psi-broker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        upsource: psi-broker
        jetbrains.network/upsource: "true"
    spec:
      containers:
        - name: psi-broker
          args:
            - --J
          image: jetbrains/upsource-psi-broker:2020.1.1815
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: psi-broker-logs
              mountPath: /opt/upsource-psi-broker/logs
      restartPolicy: Always
      volumes:
        - name: psi-broker-logs
          emptyDir: { }
