templates/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    upsource: cassandra
  name: cassandra
spec:
  ports:
  - name: "9042"
    port: 9042
    targetPort: 9042
  selector:
    upsource: cassandra
