templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    upsource: frontend
  name: frontend
spec:
  ports:
  - name: "10061"
    port: 10061
    targetPort: 10061
  - name: "8886"
    port: 8886
    targetPort: 8886
  - name: "10070"
    port: 10070
    targetPort: 10070
  selector:
    upsource: frontend
