templates/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    upsource: proxy
  name: proxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    upsource: proxy
