templates/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    upsource: hub
  name: hub
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    upsource: hub
