templates/psi-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    upsource: psi-broker
  name: psi-broker
spec:
  ports:
  - name: "10061"
    port: 10061
    targetPort: 10061
  - name: "8886"
    port: 8886
    targetPort: 8886
  selector:
    upsource: psi-broker
