templates/upsource-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: upsource
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              jetbrains.network/upsource: "true"
  podSelector:
    matchLabels:
      jetbrains.network/upsource: "true"
